# ai-instructions

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
boilerplate/: README.md
boilerplate/.claude/: approve-search.py  approve-variants.py  enforce-pixi.py  settings.local.json
