# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "ai-instructions"
requires-python = ">=3.13"
version = "0.1.0"

# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
fix = true
target-version = "py313"

[tool.ruff.lint]
extend-ignore = [
  "ANN",    # Type annotations
  "COM812", # Conflicts with ruff-format
  "D",      # Docstrings
  "EM101",  # Exception must not use a string literal
  "EM102",  # Exception must not use an f-string literal
  "ISC001", # Conflicts with ruff-format
  "S101",   # Use of assert
  "TC001",  # Move application import into a type-checking block
  "TC002",  # Move third-party import into a type-checking block
  "TC003",  # Move standard library import into a type-checking block
  "TRY003", # Long messages outside exception class
]
select = [ "ALL" ]

[tool.ruff.lint.pydocstyle]
convention = "google"
