[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "ai-instructions"
version = "0.1.0"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.ruff]
target-version = "py313"
fix = true
lint.select = [ "ALL" ]
lint.extend-ignore = [
  "ANN",    # Type annotations
  "COM812", # Conflicts with ruff-format
  "D",      # Docstrings
  "EM101",  # Exception must not use a string literal
  "EM102",  # Exception must not use an f-string literal
  "ISC001", # Conflicts with ruff-format
  "S101",   # Use of assert
  "TC001",  # Move application import into a type-checking block
  "TC002",  # Move third-party import into a type-checking block
  "TC003",  # Move standard library import into a type-checking block
  "TRY003", # Long messages outside exception class
]
lint.per-file-ignores."boilerplate/.claude/*" = [
  "BLE001", # Blind exception (needed for robust JSON parsing)
  "T201",   # Print (required for hook output)
]
lint.pydocstyle.convention = "google"
